force-app/main/default/objects/Team__c/fields/PlayedHomeMatchesCount__c.field-meta.xml
<CustomField>
    <fullName>PlayedHomeMatchesCount__c</fullName>
    <description>Define number of games with scores that team played at home</description>
    <label>Played Home Matches Count</label>
    <summaryFilterItems>
        <field>Match__c.Winner__c</field>
        <operation>equals</operation>
        <value>Home team</value>
    </summaryFilterItems>
    <summaryForeignKey>Match__c.HomeTeam__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>