force-app/main/default/objects/Team__c/fields/TotalActivePlayers__c.field-meta.xml
<CustomField>
    <fullName>TotalActivePlayers__c</fullName>
    <description>Total number of active players</description>
    <label>Total Active Players</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>