force-app/main/default/objects/Team__c/fields/TotalWins__c.field-meta.xml
<CustomField>
    <fullName>TotalWins__c</fullName>
    <description>Total wins of the team</description>
    <label>Total Wins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>